shalinee | correct ledger alignment

--- a/apps/web-giddh/src/app/ledger/ledger.component.scss
+++ b/apps/web-giddh/src/app/ledger/ledger.component.scss
@@ -150,7 +150,6 @@ input {
 }
 .ledger-head th {
     color: $jacksons-purple;
-    padding-left: 0;
     padding-top: 5px;
     padding-bottom: 10px;
     &.first-child{
